--- a/style.css
+++ b/style.css
@@ -64,9 +64,11 @@ body {
 
 .card img {
     width: 100%;
-    max-height: 100%;
+    height: 300px;
+
+    object-fit: contain;
     border: 4px solid #333c4c;
-    border-radius: 16%;
+    border-radius: 16px;
     background-position: center;
 }
 
@@ -76,8 +78,12 @@ body {
     font-size: large;
 }
 
+.card-body {
+    min-height: 100px;
+}
+
 .card {
-    margin: 10px 16px;
+    width: 100%;
     cursor: pointer;
 }
 
@@ -88,7 +94,7 @@ body {
 
     .see-btn {
         max-width: 20%;
-    
+
     }
 }
 
