--- a/style.css
+++ b/style.css
@@ -179,6 +179,7 @@ a:hover {
 
 .card img:hover {
     transform: scale(1.05);
+    border: 4px solid #e47911;
 }
 
 .titulo-secao {
@@ -270,3 +271,7 @@ a:hover {
     text-transform: capitalize;
     padding-bottom: 16px;
 }
+
+.oculto {
+    display: none;
+  }
